# specparser

./: .gitignore  CLAUDE.md  LICENSE  README.md  colors.txt  data.duckdb  expander.py  expandspec.py  fx_straddles.txt  knitr.sh  macros.txt  pdf_compress.sh  pyproject.toml  schedules.parquet  spec.Rnw  specparser.py  straddles.parquet  test.ipynb  tickers.tsv
data/: amt.yml  commodity.txt  eqindex.txt  futs.csv  fx.txt  overrides.csv  prices_field_dict.npy  prices_ticker_dict.npy  rates.txt  stocks.txt  tri.txt
dev/: apr2025.ipynb  apr2025knitr.Rnw  backtest_data_structure.md  backtest_explorer.py  backtest_standalone.py  backtest_standalone_numba.py  bench_first_call.py  bench_fused_sweep.py  bench_hedge_tickers.py  bench_hedge_tickers_full.py  bench_hedge_tickers_opt.py  bench_id_only.py  bench_merge_debug.py  bench_merge_diagnostics.py  bench_merge_runs.py  bench_multi_sweep.py  bench_np_select.py  bench_vol_tickers_full.py  explorer_benchmarks.py  preprocess_to_numpy.py  result.Rnw  strategy_explorer.py  strategy_standalone.py  strings.ipynb  strings.py  test_strings.py
doc/: knitr_example.Rnw  spec.Rnw
docs/: amt.md  amt_format.md  asset_straddle_tickers.md  backtest_new_performance.md  backtest_optimization_plan.md  backtest_optimization_plan_v2.md  backtest_performance_findings.md  backtest_strings_plan.md  backtest_update_plan.md  codex_optimization_conclusions.md  docs_update_plan.md  dsl-syntax.md  entry_exit_convention.md  experiments.md  functions.md  make_calendar_from_specs_plan.md  matrix_unfurl.md  memoization.md  modules.md  plan-date-cache.md  plan-load-it-all.md  plan-move-get-days-ym.md  plan-table-optimization.md  plan-table-unchop-chop.md  plan_add_model_column.md  plan_add_strike_columns.md  plan_ibox_expiry_bug.md  (+16 more)
(+83 files in other folders)
