[project]
name = "specparser"
version = "0.1.0"
authors = [
    { name = "Nick Nassuphis", email = "nicknassuphis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.4",
    "pyvips>=3.1.1",
    "simpleeval>=1.0.3",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
