[project]
name = "specparser"
version = "0.1.0"
authors = [
    { name = "Nick Nassuphis", email = "nicknassuphis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.4",
    "pyvips>=3.1.1",
    "simpleeval>=1.0.3",
    "exchange_calendars>=4.5",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "numba>=0.63.1",
    "streamlit>=1.53.1",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "streamlit-lightweight-charts>=0.7.20",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
